dev: freq_analysis - Developing harmonic check function

--- a/asteroseismology/tests.ipynb
+++ b/asteroseismology/tests.ipynb
@@ -9,6 +9,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d827969d",
+   "metadata": {},
+   "source": [
+    "## Constant"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "a1dd717f",
@@ -79,7 +87,218 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86406cdb",
+   "id": "c0b29bf9",
+   "metadata": {},
+   "source": [
+    "## Freq_analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4378cbf3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import itertools as it\n",
+    "import numpy as np\n",
+    "\n",
+    "def harmonic_check(freqs:pd.DataFrame, n:int, freqs_to_combine:int, err:float) -> pd.DataFrame:\n",
+    "    \"\"\"\n",
+    "    Function to find the harmonics \n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "\n",
+    "    freqs: pd.DataFrame\n",
+    "        Frequencies to evaluate in a DataFrame containing an amplitude column.\n",
+    "    \n",
+    "    n: int\n",
+    "        Maximum harmonic to find, from -n..., 0, ..., n\n",
+    "    \n",
+    "    freqs_to_combine: int\n",
+    "        Determines how many frequencies will be used to compute the harmonics.\n",
+    "        For instance, if freqs_to_combine = 3:\n",
+    "\n",
+    "        f = n_i·f_1+ n_j·f_2+n_k·f_3 with n_i,j,k from -n to n.\n",
+    "\n",
+    "    err: float\n",
+    "        Tolerance to consider a harmonic and a frequency the same frequency.\n",
+    "\n",
+    "    Output\n",
+    "    ------\n",
+    "\n",
+    "    Dataframe containing the original frequencies and the harmonic combination found.\n",
+    "\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # 1. All n values\n",
+    "    n_values = range(-n, n+1)\n",
+    "\n",
+    "    # 2. Getting the frequencies that will serve as base of the harmonics\n",
+    "    columns = freqs.columns\n",
+    "    freqs_sorted = freqs.sort_values(by=columns[1], ascending=False).reset_index(drop=True)\n",
+    "    f_base = list(freqs_sorted.iloc[:freqs_to_combine, 0])\n",
+    "\n",
+    "    # 3. Computing all the combinations of coefficient n possible\n",
+    "    n_combis = list(it.product(n_values, repeat=freqs_to_combine))\n",
+    "\n",
+    "    # 3.1 Removing from the set all the combinations that have negative signs (frequencies are positive)\n",
+    "    n_combis = [combi for combi in n_combis if not all(x < 0 for x in combi)]\n",
+    "\n",
+    "    # 4. Computing all the possible combinations\n",
+    "    \n",
+    "\n",
+    "    return list(n_combis)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "742a98ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Freqs</th>\n",
+       "      <th>Amps</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4</td>\n",
+       "      <td>45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>7</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>9</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>20</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Freqs  Amps\n",
+       "0      2    13\n",
+       "1      4    45\n",
+       "2      7     6\n",
+       "3      9     7\n",
+       "4     20     2"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "freqs = {'Freqs': [2, 4, 7, 9, 20], 'Amps': [13, 45, 6, 7, 2]}\n",
+    "\n",
+    "freqs_df = pd.DataFrame(data=freqs)\n",
+    "freqs_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "ecec3208",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(-3, 0),\n",
+       " (-3, 1),\n",
+       " (-3, 2),\n",
+       " (-3, 3),\n",
+       " (-2, 0),\n",
+       " (-2, 1),\n",
+       " (-2, 2),\n",
+       " (-2, 3),\n",
+       " (-1, 0),\n",
+       " (-1, 1),\n",
+       " (-1, 2),\n",
+       " (-1, 3),\n",
+       " (0, -3),\n",
+       " (0, -2),\n",
+       " (0, -1),\n",
+       " (0, 0),\n",
+       " (0, 1),\n",
+       " (0, 2),\n",
+       " (0, 3),\n",
+       " (1, -3),\n",
+       " (1, -2),\n",
+       " (1, -1),\n",
+       " (1, 0),\n",
+       " (1, 1),\n",
+       " (1, 2),\n",
+       " (1, 3),\n",
+       " (2, -3),\n",
+       " (2, -2),\n",
+       " (2, -1),\n",
+       " (2, 0),\n",
+       " (2, 1),\n",
+       " (2, 2),\n",
+       " (2, 3),\n",
+       " (3, -3),\n",
+       " (3, -2),\n",
+       " (3, -1),\n",
+       " (3, 0),\n",
+       " (3, 1),\n",
+       " (3, 2),\n",
+       " (3, 3)]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test = harmonic_check(freqs=freqs_df, n=3, freqs_to_combine=2, err=0)\n",
+    "test"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68c21bb1",
    "metadata": {},
    "source": []
   }
