--- a/asteroseismology/tests.ipynb
+++ b/asteroseismology/tests.ipynb
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 183,
    "id": "4378cbf3",
    "metadata": {},
    "outputs": [],
@@ -104,7 +104,7 @@
     "import itertools as it\n",
     "import numpy as np\n",
     "\n",
-    "def harmonic_check(freqs:pd.DataFrame, n:int, freqs_to_combine:int, err:float) -> pd.DataFrame:\n",
+    "def harmonics(freqs:pd.DataFrame, n:int, freqs_to_combine:int, err:float, f_col:int=0, amp_col:int=1) -> pd.DataFrame:\n",
     "    \"\"\"\n",
     "    Function to find the harmonics \n",
     "\n",
@@ -116,46 +116,91 @@
     "    \n",
     "    n: int\n",
     "        Maximum harmonic to find, from -n..., 0, ..., n\n",
-    "    \n",
+    "\n",
     "    freqs_to_combine: int\n",
     "        Determines how many frequencies will be used to compute the harmonics.\n",
-    "        For instance, if freqs_to_combine = 3:\n",
-    "\n",
-    "        f = n_i·f_1+ n_j·f_2+n_k·f_3 with n_i,j,k from -n to n.\n",
     "\n",
     "    err: float\n",
-    "        Tolerance to consider a harmonic and a frequency the same frequency.\n",
+    "        Tolerance to consider a harmonic and a frequency the same frequency. Typically Rayleigh frequency.\n",
+    "\n",
+    "    f_col: int\n",
+    "        Frequency column. Consider 0 as first column. Default = 0\n",
+    "\n",
+    "    amp_col: int\n",
+    "        Amplitude column. Consider 0 as first column. Default = 1\n",
     "\n",
     "    Output\n",
     "    ------\n",
     "\n",
-    "    Dataframe containing the original frequencies and the harmonic combination found.\n",
+    "    Dataframe containing the original frequencies, harmonics and the harmonic combination found.\n",
     "\n",
+    "    Example\n",
+    "    -------\n",
+    "        For instance, if freqs_to_combine = 3:\n",
+    "\n",
+    "        f = n_i·f_0 + n_j·f_2 with n_i,j from -n to n.\n",
+    "\n",
+    "        OR\n",
+    "\n",
+    "        f = n_i·f_0+ n_j·f_1\n",
     "    \"\"\"\n",
     "\n",
-    "    # 1. All n values\n",
-    "    n_values = range(-n, n+1)\n",
-    "\n",
-    "    # 2. Getting the frequencies that will serve as base of the harmonics\n",
+    "    # 1. Sorting the frequencies per amplitude\n",
     "    columns = freqs.columns\n",
-    "    freqs_sorted = freqs.sort_values(by=columns[1], ascending=False).reset_index(drop=True)\n",
-    "    f_base = list(freqs_sorted.iloc[:freqs_to_combine, 0])\n",
+    "    freqs_sorted = freqs.sort_values(by=columns[amp_col], ascending=False).reset_index(drop=True)\n",
+    "    structure = freqs_sorted.copy()\n",
+    "    fre = np.array(structure.iloc[:,f_col])\n",
     "\n",
-    "    # 3. Computing all the combinations of coefficient n possible\n",
-    "    n_combis = list(it.product(n_values, repeat=freqs_to_combine))\n",
+    "    # 2. Calculate all the possible combinations (including harmonics)\n",
+    "    product = list(it.product(range(1,freqs_to_combine+1),range(n,-(n+1),-1)))\n",
+    "    combination = list(it.combinations(product,2)) #Pairs of combination\n",
     "\n",
-    "    # 3.1 Removing from the set all the combinations that have negative signs (frequencies are positive)\n",
-    "    n_combis = [combi for combi in n_combis if not all(x < 0 for x in combi)]\n",
+    "    # 3. List containing the results [(frequency number,combination)]\n",
+    "    possible_combinations = []\n",
     "\n",
-    "    # 4. Computing all the possible combinations\n",
-    "    \n",
+    "    for pair in combination:\n",
+    "        #We avoid pairs of the same frequency and negative values of the combination to not repeat opperations\n",
+    "        if ( ( (pair[0][0] != pair[1][0]) or (pair[1][1] == 0) ) and ( (pair[0][1]*fre[pair[0][0]-1]+pair[1][1]*fre[pair[1][0]-1]) > 0 ) ):\n",
+    "            differencies = abs(fre - (pair[0][1]*fre[pair[0][0]-1]+pair[1][1]*fre[pair[1][0]-1])) #Differencies with all the frequencies\n",
+    "            differencies_under_tol = np.where(differencies <= err)\n",
+    "            if differencies_under_tol[0].size > 0:\n",
+    "                fre_id = int(differencies_under_tol[0][0]+1) #Just the first coincidence\n",
+    "                possible_combinations = possible_combinations+[(fre_id,)+pair]\n",
     "\n",
-    "    return list(n_combis)"
+    "    possible_combinations = sorted(possible_combinations) #We order the structure\n",
+    "\n",
+    "    # 4. Now, complete the Combinations columns\n",
+    "    structure.insert(0,'ID', ['F'+str(i) for i in range(1,len(fre)+1)])\n",
+    "    f = [(0, (len(fre)+2, 0), (len(fre)+2, 0))] #We initialize a variable to allow to select the combination involving the first frequencies\n",
+    "    comb = []\n",
+    "    for m in possible_combinations:\n",
+    "        if ( m[1][1] == 0 and m[2][1] != 1 and m[2][0] != m[0] ):\n",
+    "            comb = str(m[2][1])+'*F'+str(m[2][0])\n",
+    "        elif ( m[2][1] == 0 and m[1][1] != 1 and m[1][0] != m[0] ):\n",
+    "            comb = str(m[1][1])+'*F'+str(m[1][0])\n",
+    "        elif ( m[1][0] < m[0] and m[2][0] < m[0] ):\n",
+    "            if m[2][1] > 0:\n",
+    "                comb = str(m[1][1])+'*F'+str(m[1][0])+'+'+str(m[2][1])+'*F'+str(m[2][0])\n",
+    "            else:\n",
+    "                comb = str(m[1][1])+'*F'+str(m[1][0])+str(m[2][1])+'*F'+str(m[2][0])\n",
+    "\n",
+    "        # 4.1 Here we select the lowest combinations\n",
+    "        if ( comb != []):\n",
+    "            if ( m[0] != f[0]): #This is to add a combination for the next frequency\n",
+    "                structure.loc[m[0]-1, 'Combinations'] = comb\n",
+    "                f = m\n",
+    "            elif (m[0] == f[0] and m[1][0]+m[2][0] < f[1][0]+f[2][0]): #This is to select the lowest frequency for the combination\n",
+    "                structure.loc[m[0]-1, 'Combinations'] = comb\n",
+    "                f = m\n",
+    "\n",
+    "        comb = [] # 4.2 Re-initialize this structure\n",
+    "\n",
+    "    return pd.DataFrame(data=structure)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 184,
    "id": "742a98ed",
    "metadata": {},
    "outputs": [
@@ -197,12 +242,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>7</td>\n",
+       "      <td>6</td>\n",
        "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>9</td>\n",
+       "      <td>8</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -218,18 +263,18 @@
        "   Freqs  Amps\n",
        "0      2    13\n",
        "1      4    45\n",
-       "2      7     6\n",
-       "3      9     7\n",
+       "2      6     6\n",
+       "3      8     7\n",
        "4     20     2"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 184,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "freqs = {'Freqs': [2, 4, 7, 9, 20], 'Amps': [13, 45, 6, 7, 2]}\n",
+    "freqs = {'Freqs': [2, 4, 6, 8, 20], 'Amps': [13, 45, 6, 7, 2]}\n",
     "\n",
     "freqs_df = pd.DataFrame(data=freqs)\n",
     "freqs_df"
@@ -237,62 +282,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 185,
    "id": "ecec3208",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>Freqs</th>\n",
+       "      <th>Amps</th>\n",
+       "      <th>Combinations</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>F1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>45</td>\n",
+       "      <td>2*F2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>F2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>13</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>F3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2*F1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>F4</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>-1*F1+5*F2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>F5</td>\n",
+       "      <td>20</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5*F1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "[(-3, 0),\n",
-       " (-3, 1),\n",
-       " (-3, 2),\n",
-       " (-3, 3),\n",
-       " (-2, 0),\n",
-       " (-2, 1),\n",
-       " (-2, 2),\n",
-       " (-2, 3),\n",
-       " (-1, 0),\n",
-       " (-1, 1),\n",
-       " (-1, 2),\n",
-       " (-1, 3),\n",
-       " (0, -3),\n",
-       " (0, -2),\n",
-       " (0, -1),\n",
-       " (0, 0),\n",
-       " (0, 1),\n",
-       " (0, 2),\n",
-       " (0, 3),\n",
-       " (1, -3),\n",
-       " (1, -2),\n",
-       " (1, -1),\n",
-       " (1, 0),\n",
-       " (1, 1),\n",
-       " (1, 2),\n",
-       " (1, 3),\n",
-       " (2, -3),\n",
-       " (2, -2),\n",
-       " (2, -1),\n",
-       " (2, 0),\n",
-       " (2, 1),\n",
-       " (2, 2),\n",
-       " (2, 3),\n",
-       " (3, -3),\n",
-       " (3, -2),\n",
-       " (3, -1),\n",
-       " (3, 0),\n",
-       " (3, 1),\n",
-       " (3, 2),\n",
-       " (3, 3)]"
+       "   ID  Freqs  Amps Combinations\n",
+       "0  F1      4    45         2*F2\n",
+       "1  F2      2    13          NaN\n",
+       "2  F3      8     7         2*F1\n",
+       "3  F4      6     6   -1*F1+5*F2\n",
+       "4  F5     20     2         5*F1"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 185,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test = harmonic_check(freqs=freqs_df, n=3, freqs_to_combine=2, err=0)\n",
+    "test = harmonics(freqs=freqs_df, n=5, freqs_to_combine=5, err=0)\n",
     "test"
    ]
   },
