Testing and developing freq_resolver

--- a/asteroseismology/tests.ipynb
+++ b/asteroseismology/tests.ipynb
@@ -94,8 +94,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4266788d",
+   "metadata": {},
+   "source": [
+    "### harmonics"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 2,
    "id": "4378cbf3",
    "metadata": {},
    "outputs": [],
@@ -200,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 17,
    "id": "742a98ed",
    "metadata": {},
    "outputs": [
@@ -268,7 +276,7 @@
        "4     20     2"
       ]
      },
-     "execution_count": 184,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,12 +384,269 @@
    "cell_type": "markdown",
    "id": "68c21bb1",
    "metadata": {},
+   "source": [
+    "### freq_resolver"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "2b646619",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from intervaltree import IntervalTree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "caf57ff7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def freq_resolver(freqs:pd.DataFrame, err:float, f_col:int=0, amp_col:int=1, type:str='close-open'):\n",
+    "    \"\"\"\n",
+    "    This function evaluates if there are frequencies closer than err (e.g. the Rayleigh frequency). It will take the highest amplitude's as the real value.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "\n",
+    "    freqs: pd.DataFrame\n",
+    "        DataFrame containing the frequencies and amplitudes\n",
+    "\n",
+    "    err: float\n",
+    "        Tolerance value. Resolving power. For frequencies closer than this value, the one with highest amplitude will be considered the real one\n",
+    "\n",
+    "    f_col: int\n",
+    "        Index of the column containing frequencies.\n",
+    "\n",
+    "    amp_col: int\n",
+    "        Index of the column containing amplitudes.\n",
+    "\n",
+    "    type: str\n",
+    "        Type of error interval\n",
+    "\n",
+    "            'close' = [-err, err]\n",
+    "\n",
+    "            'open' = (-err, err)\n",
+    "\n",
+    "            'close-open' = [-err, err)\n",
+    "\n",
+    "            'open-close' = (-err, err]\n",
+    "\n",
+    "    Output\n",
+    "    ------\n",
+    "\n",
+    "    Frequency dataframe with only frequencies that are spaced more than err.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # 1. Extracting frequencies and amplitudes values\n",
+    "    columns = freqs.columns\n",
+    "    fs = freqs[columns[f_col]].values\n",
+    "    amps = freqs[columns[amp_col]].values\n",
+    "    err0 = err\n",
+    "    eps = 10**-8\n",
+    "\n",
+    "    limits = {\n",
+    "        'close': [err, err+eps],\n",
+    "        'open' : [err-eps, err-eps],\n",
+    "        'close-open': [err, err],\n",
+    "        'open-close': [err-eps, err+eps]\n",
+    "    }\n",
+    "    \n",
+    "\n",
+    "    #2. We create an interval tree to consider the overalps within err\n",
+    "    tree = IntervalTree()\n",
+    "\n",
+    "    #3. We defined the resolved frequencies\n",
+    "    resolved = []\n",
+    "\n",
+    "    # 4. Loop over the frequencies\n",
+    "    for i, f in enumerate(fs):\n",
+    "\n",
+    "        # 4.1 Check if the frequency is within any tolerance range in the tree\n",
+    "        overlaps = tree.overlap(f-err/2, f+err/2)\n",
+    "\n",
+    "        # 4.2 Adding to the tree in case there is no overlaps\n",
+    "        if not overlaps:\n",
+    "            tree.addi(f-limits[type][0]/2, f+limits[type][1]/2, i) #begin, end, index\n",
+    "            resolved.append(i)\n",
+    "            continue\n",
+    "\n",
+    "        # 4.3 If the frequency does overlaps, comparing amplitudes\n",
+    "        best = i\n",
+    "        for iv in overlaps:\n",
+    "            j = iv.data\n",
+    "            if amps[j]>amps[i]:\n",
+    "                best = j\n",
+    "\n",
+    "        # 4.4 If the current one is still the best, we replace and remove the rest that overlaps the current one\n",
+    "        if best == i:\n",
+    "            for iv in overlaps:\n",
+    "                tree.remove(iv)\n",
+    "                resolved.remove(iv.data)\n",
+    "            \n",
+    "            # 4.4.1 Inserting the current one\n",
+    "            tree.addi(f-limits[type][0]/2, f+limits[type][1]/2, i)\n",
+    "            resolved.append(i)\n",
+    "\n",
+    "    return freqs.iloc[resolved].reset_index(drop=True)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "498df899",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Freqs</th>\n",
+       "      <th>Amps</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4</td>\n",
+       "      <td>45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>20</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Freqs  Amps\n",
+       "0      4    45\n",
+       "1     20     2"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test = freq_resolver(freqs=freqs_df, err=4, type='open-close')\n",
+    "test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "7509a32e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Freqs</th>\n",
+       "      <th>Amps</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4</td>\n",
+       "      <td>45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>8</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>20</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Freqs  Amps\n",
+       "0      2    13\n",
+       "1      4    45\n",
+       "2      6     6\n",
+       "3      8     7\n",
+       "4     20     2"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "freqs_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dab8242c",
+   "metadata": {},
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".stellar_env (3.13.5)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -395,7 +660,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
