dev: freq_analysis - Debugging harmonics - broke if freqs_to_combine>freqs - and modifying antialiasing to return the same df with an extra column

--- a/asteroseismology/tests.ipynb
+++ b/asteroseismology/tests.ipynb
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "4378cbf3",
    "metadata": {},
    "outputs": [],
@@ -160,6 +160,9 @@
     "    fre = np.array(structure.iloc[:,f_col])\n",
     "\n",
     "    # 2. Calculate all the possible combinations (including harmonics)\n",
+    "    # 2.1 In case number of frequencies is higher than the actual list, updating freqs_to_combine\n",
+    "    if freqs_to_combine > len(fre):\n",
+    "        freqs_to_combine = len(fre)\n",
     "    product = list(it.product(range(1,freqs_to_combine+1),range(n,-(n+1),-1)))\n",
     "    combination = list(it.combinations(product,2)) #Pairs of combination\n",
     "\n",
@@ -208,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 118,
    "id": "742a98ed",
    "metadata": {},
    "outputs": [
@@ -276,7 +279,7 @@
        "4     20     2"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 119,
    "id": "ecec3208",
    "metadata": {},
    "outputs": [
@@ -370,13 +373,13 @@
        "4  F5     20     2         5*F1"
       ]
      },
-     "execution_count": 185,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test = harmonics(freqs=freqs_df, n=5, freqs_to_combine=5, err=0)\n",
+    "test = harmonics(freqs=freqs_df, n=5, freqs_to_combine=7, err=0)\n",
     "test"
    ]
   },
@@ -879,14 +882,317 @@
    "id": "6caa422b",
    "metadata": {},
    "source": [
-    "### Other Function"
+    "### antialiasing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "id": "e496077e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import os\n",
+    "\n",
+    "def anti_aliasing(frequency_sample:pd.DataFrame, window_peaks:list, max_harmonic:int=3, save_file:bool=False, filename:str='test')-> pd.DataFrame:\n",
+    "    \"\"\"\n",
+    "    Returns frequencies that are neither Nyquist nor window function aliased frequencies.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "\n",
+    "    frequency_sample: pd.DataFrame\n",
+    "        Frequency Dataframe, preferably with amplitudes and frequency error estimation. Format must be\n",
+    "        Freqs, Amps, Freqs_error\n",
+    "\n",
+    "    window_peaks: list\n",
+    "        List with all sources of aliasing, i.e. Nyquist frequency, window function \n",
+    "        frequencies, known gap spacing frequencies\n",
+    "    \n",
+    "    max_harmonic: int\n",
+    "        Maximum integer to look for when applying f_alias = |f_real +/- f_wp|, \n",
+    "        being f_wp the p-th frequency from the window peaks\n",
+    "\n",
+    "    save_file: bool\n",
+    "        If true, a folder 'real_freqs' will be generated at your working directory containing a file\n",
+    "        where columns are Freqs, Amps, Freq_err, Alias. If alias frequency, harmonic combination is shown,\n",
+    "        else, column is empty.\n",
+    "    \n",
+    "    file_name: str (mandatory if save_file)\n",
+    "        Name of the file where freqs will be stored\n",
+    "    \n",
+    "    Output\n",
+    "    ------\n",
+    "\n",
+    "    real_freqs: pd.DataFrame\n",
+    "        DataFrame with the same format as the file output and a Alias column where the combinations are written as n_i*f_i+/-n_j*f_wj,\n",
+    "        being i and j the index of the i-th and j-th real frequency and window frequency, respectively\n",
+    "    \"\"\"\n",
+    "\n",
+    "    real_frequencies = []\n",
+    "    all_combis = []\n",
+    "    columns = frequency_sample.columns\n",
+    "    frequency_sample.sort_values(by=columns[1], ascending=False, inplace=True, ignore_index=True)\n",
+    "    file_df = frequency_sample.copy()\n",
+    "    \n",
+    "    for row in frequency_sample.itertuples(index=False):\n",
+    "        is_alias = False\n",
+    "        f_peak = row[0]\n",
+    "        amp_peak = row[1]\n",
+    "        error_f_peak = row[2]\n",
+    "        combination = ''\n",
+    "        \n",
+    "        # === 1. DIRECT MATCH CHECK (vs. SWF peaks) ===\n",
+    "        # If the peak matches a window frequency, it's highly likely a sampling artifact.\n",
+    "        for i, f_w in enumerate(window_peaks):\n",
+    "            for n in range(1,max_harmonic+1):\n",
+    "                if abs(f_peak - n*f_w) < error_f_peak:\n",
+    "                    is_alias = True\n",
+    "                    combination = f\"{n}*f_w{i}\"\n",
+    "                    break\n",
+    "        \n",
+    "        if is_alias:\n",
+    "            all_combis.append(combination)\n",
+    "            continue\n",
+    "        \n",
+    "        # === 2. INVERSE ALIAS CHECK (vs. already accepted REAL peaks) ===\n",
+    "        # Is this peak (f_peak) an alias of a REAL frequency (f_real) already found?\n",
+    "        for i, f_real in enumerate(real_frequencies):\n",
+    "            \n",
+    "            \n",
+    "            # We only check against the window frequencies\n",
+    "            for j, f_w in enumerate(window_peaks):\n",
+    "                for n in range(1, max_harmonic + 1):\n",
+    "                    # Alias formulas: f_alias = |f_real ± n*f_w|\n",
+    "                    alias_sum = abs(f_real + n * f_w)\n",
+    "                    alias_sub = abs(f_real - n * f_w)\n",
+    "                    \n",
+    "                    # Dynamic Tolerance Check: Does f_peak fall within twice the error of the theoretical alias?\n",
+    "                    if abs(f_peak - alias_sum) <= error_f_peak:\n",
+    "                        \n",
+    "                        # Since data is sorted by amplitude, amp_peak <= amp_real,\n",
+    "                        # confirming this peak is a weaker \"daughter\" peak.\n",
+    "                        is_alias = True\n",
+    "                        combination = f\"f_{i}+{n}*f_w{j}\"\n",
+    "                        all_combis.append(combination)\n",
+    "                        break\n",
+    "                    elif abs(f_peak - alias_sub) <= error_f_peak:\n",
+    "                        is_alias = True\n",
+    "                        combination = f\"f_{i}-{n}*f_w{j}\"\n",
+    "                        all_combis.append(combination)\n",
+    "                        break\n",
+    "\n",
+    "                if is_alias:\n",
+    "                    break\n",
+    "\n",
+    "            if is_alias:\n",
+    "                break\n",
+    "        \n",
+    "        # === 3. ACCEPTANCE ===\n",
+    "        # If the peak fails all alias checks, it's accepted as a candidate for a real physical signal.\n",
+    "        if not is_alias:\n",
+    "            real_frequencies.append(f_peak)\n",
+    "            all_combis.append(np.nan)\n",
+    "\n",
+    "    file_df['Alias'] = all_combis\n",
+    "    #file_df.sort_values(by=, ascending=False, inplace=True)\n",
+    "    if save_file:\n",
+    "        os.makedirs('real_freqs', exist_ok=True)\n",
+    "        file_df.to_csv('./real_freqs/'+filename\n",
+    "                       , index=False, header=True)\n",
+    "            \n",
+    "    return file_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "id": "8b49231c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Freqs</th>\n",
+       "      <th>Amps</th>\n",
+       "      <th>err</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2</td>\n",
+       "      <td>13</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4</td>\n",
+       "      <td>45</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>8</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>20</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Freqs  Amps  err\n",
+       "0      2    13    0\n",
+       "1      4    45    0\n",
+       "2      6     6    0\n",
+       "3      8     7    0\n",
+       "4     20     2    0"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "freqs = {'Freqs': [2, 4, 6, 8, 20], 'Amps': [13, 45, 6, 7, 2], 'err': [0, 0, 0, 0, 0]}\n",
+    "\n",
+    "freqs_df = pd.DataFrame(data=freqs)\n",
+    "freqs_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "id": "8f7dc378",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Freqs</th>\n",
+       "      <th>Amps</th>\n",
+       "      <th>err</th>\n",
+       "      <th>Alias</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4</td>\n",
+       "      <td>45</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>13</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>8</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>20</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>f_1+2*f_w0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Freqs  Amps  err       Alias\n",
+       "0      4    45    0         NaN\n",
+       "1      2    13    0         NaN\n",
+       "2      8     7    0         NaN\n",
+       "3      6     6    0         NaN\n",
+       "4     20     2    0  f_1+2*f_w0"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test = anti_aliasing(frequency_sample=freqs_df, window_peaks=[9], max_harmonic=8)\n",
+    "test"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "6be5284f",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Other Function"
+   ]
   }
  ],
  "metadata": {
